--- a/Home.html
+++ b/Home.html
@@ -436,18 +436,13 @@
         }
         @media (max-width:495px) {
             .modal .padding_left {
-                padding-left: 4% !important;
+                padding-left: 12% !important;
             }
             .modal .logo_img {
                 width:35% !important
             }
             .modal .text_size {
                font-size: 17px !important;
-            }
-            #Step_1_Modal .modal-body .card-1 .container,
-            #Step_2_Modal .modal-body .card-1 .container,
-            #Step_3_Modal .modal-body .card-1 .container{
-                padding-left: 5px !important;
             }
         }
 
@@ -491,27 +486,35 @@
                 font-size: x-large !important;
                 font-size: x-large !important;
             }
-
             .text_size_2 {
                 font-size: medium !important;
                 font-size: medium !important;
             }
-
             #pro_in_three_steps .col-4 {
                 padding-left: 1px !important;
                 padding-right: 1px !important;
             }
-
             .extra_space_top_bottom {
                 margin-top: 5px !important;
                 margin-bottom: 5px !important;
                 padding-top: 5px !important;
                 padding-bottom: 5px !important;
             }
-
             .center_col {
                 margin-top: 5px !important;
                 margin-bottom: 5px !important;
+            }
+            #Step_1_Modal .modal-body .card-1 .container,
+            #Step_2_Modal .modal-body .card-1 .container,
+            #Step_3_Modal .modal-body .card-1 .container{
+                padding-left: 15px !important;
+            }
+        }
+        @media (max-width:375px) {
+            #Step_1_Modal .modal-body .card-1 .container,
+            #Step_2_Modal .modal-body .card-1 .container,
+            #Step_3_Modal .modal-body .card-1 .container{
+                padding-left: 5px !important;
             }
         }
     </style>
