--- a/Home.html
+++ b/Home.html
@@ -847,7 +847,7 @@
         <div class="mt-5 container-fluid pagespeed_hide" id="pro_in_three_steps" style="width:80%">
             <div class="row">
                 <div class="mb-5 mt-5 pt-5 personal_learning_p">
-                    <p>Be a PRO in 3 steps</p>
+                    <p class="my-0">Be a <span style="color:#5271ff">PRO</span> in 3 steps</p>
                 </div>
             </div>
             <div class="row px-1 justify-content-center" style="padding-right: 0 !important;">
