--- a/Home.html
+++ b/Home.html
@@ -509,6 +509,9 @@
             #Step_3_Modal .modal-body .card-1 .container{
                 padding-left: 15px !important;
             }
+            #img_logo{
+                width: 75% !important;
+            }
         }
         @media (max-width:375px) {
             #Step_1_Modal .modal-body .card-1 .container,
@@ -883,7 +886,7 @@
                                 <div
                                     class="my-4 row py-4 d-flex justify-content-center align-items-center extra_space_top_bottom">
                                     <div class="col-12 text-center">
-                                        <img class="logo_img" src="img/horizontal_scroll/images/Tredcode.svg"
+                                        <img class="logo_img" id="img_logo" src="img/horizontal_scroll/images/Tredcode.svg"
                                             loading="lazy" alt="task_list" style="width:73%" />
                                     </div>
                                     <div class="my-4 col-12 text-center center_col">
