--- a/index.html
+++ b/index.html
@@ -3976,7 +3976,7 @@
         });
     </script>
 
-    <script src="js/Home.js" defer></script>
+    <script src="js/Index.js" defer></script>
     <script src="js/Form_validation.js" defer></script>
 
     <script>
