--- a/Home.html
+++ b/Home.html
@@ -487,8 +487,8 @@
                 font-size: medium !important;
             }
             #pro_in_three_steps .col-4 {
-                padding-left: 1px !important;
-                padding-right: 1px !important;
+                padding-left: 2px !important;
+                padding-right: 2px !important;
             }
             .extra_space_top_bottom {
                 margin-top: 5px !important;
@@ -845,14 +845,14 @@
         <!-- Be a PRO Trader (In 3 Steps) -->
         <div class="mt-5 container-fluid pagespeed_hide" id="pro_in_three_steps" style="width:80%">
             <div class="row">
-                <div class="mb-5 mt-5 pt-5 personal_learning_p">
-                    <p class="my-0">Be a <span style="color:#5271ff">PRO</span> in 3 steps</p>
+                <div class="mb-3 mt-5 pt-5 personal_learning_p">
+                    <p class="my-0"><span style="font-size: xx-large;">Be a <span style="color:#5271ff">PRO</span> in 3 steps</span></p>
                 </div>
             </div>
             <div class="row px-1 justify-content-center" style="padding-right: 0 !important;">
                 <div class="container">
                     <div class="row">
-                        <div class="col-4 Modal_Click_Here" data-bs-toggle="modal" data-bs-target="#Step_1_Modal">
+                        <div class="col-4 px-1 Modal_Click_Here" data-bs-toggle="modal" data-bs-target="#Step_1_Modal">
                             <div class="container d-flex justify-content-center align-content-between"
                                 style="border-radius: 15px; background-color:#ecf0ff">
                                 <div
@@ -899,7 +899,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4 Modal_Click_Here" data-bs-toggle="modal" data-bs-target="#Step_3_Modal">
+                        <div class="col-4 px-1 Modal_Click_Here" data-bs-toggle="modal" data-bs-target="#Step_3_Modal">
                             <div class="container d-flex justify-content-center align-content-between"
                                 style="border-radius: 15px; background-color:#ecf0ff">
                                 <div
@@ -950,6 +950,7 @@
                                         </div>
                                         <div class="icon d-flex align-items-center justify-content-center">
                                             <i class="fa" aria-hidden="true"></i>
+                                            <!-- <i class="fa-solid fa-plus"></i> -->
                                         </div>
                                     </button>
                                 </div>
@@ -1003,6 +1004,7 @@
                                         </div>
                                         <div class="icon d-flex align-items-center justify-content-center">
                                             <i class="fa" aria-hidden="true"></i>
+                                            <!-- <i class="fa-solid fa-plus"></i> -->
                                         </div>
                                     </button>
                                 </div>
@@ -1095,6 +1097,7 @@
                                         </div>
                                         <div class="icon d-flex align-items-center justify-content-center">
                                             <i class="fa" aria-hidden="true"></i>
+                                            <!-- <i class="fa-solid fa-plus"></i> -->
                                         </div>
                                     </button>
                                 </div>
@@ -1269,136 +1272,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-        <div id="carouselExampleIndicators" class="carousel slide my-5" data-bs-ride="carousel"
-            style="background-color: #ffffff;">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                    aria-label="Slide 4"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <div class="container">
-                        <div class="my-4 row py-4 justify-content-center">
-                            <div class="col-lg-6">
-                                <img src="./img/Screenshot_30.webp" alt="Money Flux Image" width="100%" height="100%"
-                                    style="border-radius: 10px; box-shadow: 0 0 5px 5px rgb(218, 218, 218);" />
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="img_description_bold text-left" style="color:#5271ff">
-                                    <span style="font-weight: bold">Money Flux</span>
-                                </div>
-                                <div class="my-3 img_description text-left">
-                                    <span style="font-weight: normal">See How Big Players Are Building Positions In
-                                        Index. Best Tool To Have For Option Buying In Markets. With Money Flux You
-                                        Will
-                                        Get Candle By Candle Position Update Of All Market Participants. Money Flux
-                                        Checks, Oi, Price Movement Of All Strikes, Bid-ask Ratio And Gives You A
-                                        Clear
-                                        Picture Of What Is Happening Behind The Candle. This Will Increase Your
-                                        Trading
-                                        Accuracy Significantly.
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="container">
-                        <div class="py-4 my-4 row justify-content-center" id="second_row">
-                            <div class="col-lg-6">
-                                <img src="./img/Screenshot_29.webp" alt="Swing Centre Image" width="100%" height="100%"
-                                    style="border-radius: 10px;box-shadow: 0 0 5px 5px rgb(218, 218, 218);" />
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="img_description_bold text-left" style="color:#5271ff">
-                                    <span style="font-weight: bold">Index Analysis</span>
-                                </div>
-                                <div class="my-3 img_description text-left">
-                                    <span style="font-weight: normal">Now See Whether Institutions Are Building
-                                        Bullish
-                                        Or Bearish Positions In The Market And Analyze With The Custom Time Range
-                                        Selector. If You Are Planning To Buy A Breakout But Not Sure Whether That
-                                        Breakout Will Sustain Or Not, Then Index Analyzer Is For You. It Will Show
-                                        You
-                                        The Net Position Built In Index And Gives You Information About Who Is In
-                                        Control, Are They Bulls Or Bears.
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="container">
-                        <div class="my-4 row py-4 justify-content-center">
-                            <div class="col-lg-6">
-                                <img src="./img/Screenshot_28.webp" alt="Index Analysis Image" width="100%"
-                                    height="100%"
-                                    style="border-radius: 10px;box-shadow: 0 0 5px 5px rgb(218, 218, 218);" />
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="img_description_bold text-left" style="color:#5271ff">
-                                    <span style="font-weight: bold">Swing Centre</span>
-                                </div>
-                                <div class="my-3 img_description text-left">
-                                    <span style="font-weight: normal">It Provides The Best Stocks Available To Add
-                                        In
-                                        Your Swing Baskets, & Gives Clear Idea About Current Money Flow Across The
-                                        Different Market Segment. Stocks Which Are Breaking Important Support And
-                                        Resistance Will Momentum Will Be Filtered Here. A Must Have Tool If You Are
-                                        Doing Swing Trading And Short-term Investing.
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="container">
-                        <div class="py-4 my-4 row justify-content-center" id="fourth_row">
-                            <div class="col-lg-6">
-                                <img src="./img/Screenshot_31.webp" alt="Pro Setups Images" width="100%" height="100%"
-                                    style="border-radius: 10px;box-shadow: 0 0 5px 5px rgb(218, 218, 218);" />
-                            </div>
-                            <div class="col-lg-4">
-                                <div class="img_description_bold text-left" style="color:#5271ff">
-                                    <span style="font-weight: bold">Pro Setups</span>
-                                </div>
-                                <div class="my-3 img_description text-left">
-                                    <span style="font-weight: normal">Here Active Day Traders Will Find Most
-                                        Suitable
-                                        Trade Setups As Per Their Style Of Trading. Pro Setup Gives Variety Of
-                                        Trades
-                                        Starts From Highest Reversal Trade Opportunities, Momentum Trading, Loss Of
-                                        Momentum Trading , Multiple Support/ Resistance Breakout And Much More Pro
-                                        Setups To Trade In Intraday.
-                                    </span>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
         </div>
 
         <!-- Video Testimonail -->
