--- a/Home.html
+++ b/Home.html
@@ -482,6 +482,9 @@
                 padding-left: 8px !important;
                 padding-right: 8px !important;
             }
+            #container_row_width{
+                padding-left: 0 !important;
+            }
         }
 
         @media (max-width:600px) {
@@ -873,7 +876,7 @@
                     <p class="my-0"><span class="Heading_Steps" style="font-size: xxx-large;">Be a <span style="color:#5271ff">PRO</span> in 3 steps</span></p>
                 </div>
             </div>
-            <div class="row px-1 justify-content-center" style="padding-right: 0 !important;">
+            <div class="row px-1 justify-content-center" id="container_row_width" style="padding-right: 0 !important;">
                 <div class="container">
                     <div class="row">
                         <div class="col-4 px-1 Modal_Click_Here" data-bs-toggle="modal" data-bs-target="#Step_1_Modal">
